infrastructure/kubernetes/bluejay/assets-manager/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: bluejay-assets-manager
  namespace: governify-bluejay
spec:
  rules:
    - host: bluejay-assets-manager.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bluejay-assets-manager
                port:
                  number: 80
